# Proyecto1

.gitignore/: .gitignore
.gitignore/Proyecto1Backup/: main.cpp
.gitignore/clienteBackup/: CMakeLists.txt  main.cpp
ClienteLib/: CMakeLists.txt  library.cpp  library.h
Proyecto1/: CMakeLists.txt  main.cpp
Proyecto1Backup/: main.cpp
Prueba/: CMakeLists.txt  library.cpp  main.cpp
cliente/: CMakeLists.txt  main.cpp
